[project]
name = "ipv6-proxy-pool"
version = "1.0.0"
description = "高性能 IPv6 出口代理池，支持动态 IPv6 地址池和访问控制"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Claude Code"},
]
keywords = ["proxy", "ipv6", "http", "https", "asyncio", "pool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]

# 核心依赖 - 仅标准库
dependencies = [
    "requests>=2.32.4",
]

[project.optional-dependencies]
# 可选依赖 - 示例和测试使用
examples = [
    "requests>=2.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
ipv6-proxy-pool = "ipv6_proxy_pool:main"

[project.urls]
Homepage = "https://github.com/example/ipv6-proxy-pool"
Documentation = "https://github.com/example/ipv6-proxy-pool#readme"
Repository = "https://github.com/example/ipv6-proxy-pool"
Issues = "https://github.com/example/ipv6-proxy-pool/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Ruff 配置
[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = ["E501"]  # Line too long (handled by formatter)

# Pytest 配置
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
